--- a/AUF.EMR.Application/AUF.EMR.Application.csproj
+++ b/AUF.EMR.Application/AUF.EMR.Application.csproj
@@ -11,6 +11,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="MySql.Data" Version="8.4.0" />
+    <PackageReference Include="MySqlBackup.NET" Version="2.3.8" />
   </ItemGroup>
 
   <ItemGroup>
